--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,15 @@ spring.main.banner-mode=off
 #server.error.whitelabel.enabled=false
 
 # create and drop tables and sequences
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=carsystem
-spring.datasource.password=carsystem
-spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/car
+spring.datasource.username=car
+spring.datasource.password=devekis01
 
 # HikariCP settings
 # spring.datasource.hikari.*
@@ -23,4 +24,3 @@ spring.datasource.hikari.maximum-pool-size=5
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
-logging.level.=info
