--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,9 @@ dependencies {
 //    implementation 'com.oracle.database.jdbc:ojdbc8:12.2.0.1'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.14'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
+
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 }
